<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
        android:title="@string/menu_home_search"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item android:id="@+id/readAll"
          android:icon="@drawable/ic_done_all_white_24dp"
          android:title="@string/readAll"
          android:orderInCategory="1"
          app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="99"
        android:title="@string/menu_home_refresh" />

    <item
        android:id="@+id/action_share_the_app"
        android:orderInCategory="102"
        android:title="@string/menu_share_the_app" />

    <item android:id="@+id/action_disconnect"
          android:title="@string/action_disconnect"
          android:orderInCategory="104"
          app:showAsAction="never"/>
</menu>
